[gd_scene load_steps=16 format=2]

[ext_resource path="res://tipografias/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego8/escenas/nivel1.gd" type="Script" id=2]
[ext_resource path="res://juego6/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fotos/CONVERTIDO/fondooo (1).jpg" type="Texture" id=4]
[ext_resource path="res://Minercraftory.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://tipografias/Candal.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 45
outline_color = Color( 0.380392, 0.0470588, 0.0470588, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 62
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.854902, 0.168627, 0.168627, 1 )

[sub_resource type="DynamicFont" id=8]
size = 62
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.854902, 0.168627, 0.168627, 1 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="message_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 86.0
margin_top = 85.0
margin_right = 667.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -320, 74 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "BANCO DE PREGUNTAS"

[node name="TextureRect" type="TextureRect" parent="."]
pause_mode = 1
physics_interpolation_mode = 1
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="PREGUNTAS" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 188.0
margin_top = 195.0
margin_right = 379.0
margin_bottom = 268.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )

[node name="RESPUESTAS" type="Label" parent="."]
physics_interpolation_mode = 1
use_parent_material = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 368.0
margin_right = 681.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 5 )

[node name="time" type="Timer" parent="."]

[node name="RESPUESTA1" type="Button" parent="."]
margin_left = 62.0
margin_top = 299.0
margin_right = 74.0
margin_bottom = 352.0
custom_colors/font_color_pressed = Color( 0.0784314, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
flat = true

[node name="RESPUESTA3" type="Button" parent="."]
margin_left = 289.0
margin_top = 299.0
margin_right = 301.0
margin_bottom = 352.0
custom_colors/font_color_pressed = Color( 0.0784314, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
flat = true

[node name="RESPUESTA2" type="Button" parent="."]
margin_left = 532.0
margin_top = 301.0
margin_right = 544.0
margin_bottom = 354.0
custom_colors/font_color_pressed = Color( 0.0784314, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
flat = true

[node name="SALIR" type="Button" parent="."]
margin_left = 549.0
margin_top = 371.0
margin_right = 723.0
margin_bottom = 424.0
custom_colors/font_color_pressed = Color( 0.0784314, 1, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
text = "SALIR"
flat = true

[node name="puntaje" type="Label" parent="."]
margin_left = 21.0
margin_top = 22.0
margin_right = 95.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "00"

[node name="lbl_tiempo" type="Label" parent="."]
margin_left = 329.0
margin_top = 22.0
margin_right = 403.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 11 )

[node name="tmp_game" type="Timer" parent="."]

[node name="screen_game" type="CanvasLayer" parent="."]

[connection signal="timeout" from="time" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="RESPUESTA1" to="." method="_on_RESPUESTA1_pressed"]
[connection signal="pressed" from="RESPUESTA3" to="." method="_on_RESPUESTA3_pressed"]
[connection signal="pressed" from="RESPUESTA2" to="." method="_on_RESPUESTA2_pressed"]
[connection signal="pressed" from="SALIR" to="." method="_on_SALIR_pressed"]
[connection signal="timeout" from="tmp_game" to="." method="_on_tmp_game_timeout"]
